tests/expectations/compiler/symbols/illegal_names_fail.out
Error [ENV03711001]: `fooaleobar` is an invalid program name. A program cannot have "aleo" in its name.
    --> compiler-test:5:9
     |
   5 | program fooaleobar.aleo {
     |         ^^^^^^^^^^
Error [ENV03711001]: `FooaleoBar` is an invalid record name. A record cannot have "aleo" in its name.
    --> compiler-test:22:12
     |
  22 |     record FooaleoBar {
     |            ^^^^^^^^^^
Error [ENV03711001]: `aaleob` is an invalid record member name. A record member cannot have "aleo" in its name.
    --> compiler-test:24:9
     |
  24 |         aaleob: u32,
     |         ^^^^^^
Error [ENV03711001]: `aleob` is an invalid record member name. A record member cannot have "aleo" in its name.
    --> compiler-test:25:9
     |
  25 |         aleob: u32,
     |         ^^^^^
Error [ENV03711001]: `daleo` is an invalid record member name. A record member cannot have "aleo" in its name.
    --> compiler-test:26:9
     |
  26 |         daleo: u32,
     |         ^^^^^
